--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ h3{
     background-color: black;
     opacity:0.9;
     text-align: center;
+    border-radius: 5%;
 }
 form{
     padding-top: 40px;
@@ -20,6 +21,7 @@ form{
 a , input{
     padding-top: 10px;
     margin-top: 10px;
+    
 
 }
 .input{
@@ -40,4 +42,5 @@ p{
     width:314px;
     margin-top: 30px;
     border : none;
+    border-radius: 4%;
 }
