--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ p{
     color:white;
 }
 #connect{
-    background-color: red;
+    background-color:#F2293A;
     color:white;
     height:48px;
     width:314px;
