--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     background-image: url("media/cine.jpg");
     background-size: 80%;
-    font-family: 'Vollkorn', serif;
+    font-family: 'Bree Serif', serif;
 }
 h3{
     color:white;
