--- a/css/style2.css
+++ b/css/style2.css
@@ -6,6 +6,9 @@ body{
 
 }
 
+.h5{
+    font-size: 100%;
+}
 .enter{
     width: 100%;
     height: 100vh;
@@ -34,5 +37,9 @@ a {
 .page-footer{
     /* opacity:0.7; */
     background-color: black;
-    color:#F2293A;
+    color: #8C1C25;
+}
+.span{
+    color: white;
+    font-style: italic;;
 }
