--- a/css/style2.css
+++ b/css/style2.css
@@ -3,6 +3,8 @@
 body{
     margin: 0;
     font-family: 'Bree Serif', serif;
+    background-color: black;
+    color:white;
 
 }
 
@@ -31,7 +33,7 @@ a {
 }
 */
 .corps{
-    background-color: rgb(128, 0, 0);
+    /* background-color: rgb(128, 0, 0); */
 
 }
 .page-footer{
