--- a/css/style2.css
+++ b/css/style2.css
@@ -1,12 +1,26 @@
-
 /*CSS PAGE D'ACCEUIL */
-body{
+
+footer{
     margin: 0;
-    font-family: 'Bree Serif', serif;
+    
     background-color: black;
     color:white;
 
 }
+nav{
+    margin: 0;
+    font-family: 'Bree Serif', serif;
+    background-color: white;
+    color: #8C1C25;
+
+}
+section{
+    background-color: #8C1C25;
+    color: seashell;
+    font-family: 'Bree Serif', serif;
+
+}
+
 
 .h5{
     font-size: 100%;
@@ -27,19 +41,19 @@ body{
 a {
     color: inherit;
 }
+a:hover{
+    color: #8C1C25;
+}
 /*
 .footNav{
     background-color: rgb(54, 54, 54);
 }
 */
-.corps{
-    /* background-color: rgb(128, 0, 0); */
-
-}
 .page-footer{
     /* opacity:0.7; */
     background-color: black;
     color: #8C1C25;
+    font-family: 'Bree Serif', serif;
 }
 .span{
     color: white;
