--- a/css/style2.css
+++ b/css/style2.css
@@ -25,7 +25,7 @@ body{
 
 
 .pochette{
-    color: inherit;
+   
     transition: all 0.7s ease;
     
 }
@@ -55,6 +55,14 @@ img{
     padding-left: 12px;
 }
 h2{
+   
     text-align: center;
     margin :25px;
+    color:white;
+}
+a{
+    color: inherit;
+}
+a:hover{
+    color:#8C1C25;
 }
