--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+
+@media (min-width: 992px),(max-width: 1200px) {
+    
+
 body{
     background-image: url("media/cine.jpg");
     background-size: 80%;
@@ -7,9 +11,8 @@ h3{
     color:white;
 }
 #main{
-    padding-top: 90px;
-    height:660px;
-    width:450px;
+    padding-top: 20%;
+    width:130%;
     background-color: black;
     opacity:0.9;
     text-align: center;
@@ -25,7 +28,7 @@ a , input{
 
 }
 .input{
-    width:314px;
+    width:50%;
 }
 label{
     color:grey;
@@ -38,9 +41,40 @@ p{
 #connect{
     background-color:#F2293A;
     color:white;
-    height:48px;
-    width:314px;
+    width:50%;
     margin-top: 30px;
     border : none;
     border-radius: 4%;
+}
+}
+
+@media (max-width: 320px) {
+    .logo{
+        display: none;
+    }
+    #main{
+        width: 100%;
+    }
+    }
+
+
+@media (max-width: 480px) {
+    .logo{
+        display: none;
+    }
+    #main{
+        width: 100%;
+    }
+
+
+}
+@media (max-width: 768px) {
+    .logo{
+        display: none;
+    }
+    #main{
+        width: 100%;
+    }
+
+   
 }
