--- a/css/style2.css
+++ b/css/style2.css
@@ -1,5 +1,5 @@
 /*CSS PAGE D'ACCEUIL */
-
+@media (min-width: 992px),(max-width: 1200px){
 footer{
     margin: 0;
     
@@ -14,6 +14,7 @@ nav{
     color: #8C1C25;
 
 }
+
 section{
     background-color: #8C1C25;
     color: seashell;
@@ -31,7 +32,6 @@ section{
 }
 
 
-
 .film{
     height: 163.17px;
     width: 290px;
@@ -46,6 +46,9 @@ section{
 .pochette:hover{
     background-size: 400px;
     transform: scale(1.2) rotate(1deg);
+}
+a{
+    color:inherit;
 }
 a:hover{
     color: #8C1C25;
@@ -71,4 +74,45 @@ img{
 h2{
     text-align: center;
     margin :25px;
+}
+}
+
+@media (max-width: 320px) {
+   .logo{
+       display: none;
+       }
+    .collapse{
+        display: list-item !important;
+    }
+    .iframe{
+        size: 50%;
+        margin: 10%;
+       }
+}
+
+@media (max-width: 480px) {
+    .logo{
+        display: none;
+    }
+    .collapse{
+        display: list-item !important;
+    }
+    .iframe{
+        size: 50%;
+        margin: 10%;
+       }
+
+}
+@media (max-width: 768px) {
+    .logo{
+        display: none;
+    }
+    .collapse{
+        display: list-item !important;
+    }
+    .iframe{
+        size: 50%;
+        margin: 10%
+       }
+  
 }
