--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,11 @@ p{
     border : none;
     border-radius: 4%;
 }
+.TMdb{
+    position: absolute;
+    right: 0;
+    color: white;
+}
 }
 
 @media (max-width: 320px) {
