--- a/css/style2.css
+++ b/css/style2.css
@@ -5,62 +5,26 @@ footer{
     
     background-color: black;
     color:white;
+    margin-bottom: 0%;
+    position: absolute;
+    bottom: 0%;
+    left: 0%;
+    right: 0%;
 
 }
 nav{
     margin: 0;
     font-family: 'Bree Serif', serif;
-    background-color: white;
+    background-color: #261616;
     color: #8C1C25;
 
 }
 
-section{
-    background-color: #8C1C25;
-    color: seashell;
-    font-family: 'Bree Serif', serif;
-
-}
 
 
-.h5{
-    font-size: 100%;
-}
-.enter{
-    width: 100%;
-    height: 100vh;
-}
 
-
-.film{
-    height: 163.17px;
-    width: 290px;
-}
-
-
-.pochette{
-   
-    transition: all 0.7s ease;
-    
-}
-.pochette:hover{
-    background-size: 400px;
-    transform: scale(1.2) rotate(1deg);
-}
-a{
-    color:inherit;
-}
-a:hover{
-    color: #8C1C25;
-}
-/*
-.footNav{
-    background-color: rgb(54, 54, 54);
-}
-*/
 .page-footer{
-    /* opacity:0.7; */
-    background-color: black;
+    background-color: #261616;
     color: #8C1C25;
     font-family: 'Bree Serif', serif;
 }
@@ -71,19 +35,23 @@ a:hover{
 img{
     padding-left: 12px;
 }
-h2{
-   
-    text-align: center;
-    margin :25px;
-    /* color:white; */
-}
-a{
+.privacy{
     color: inherit;
+    color: #8C1C25;
 }
-a:hover{
-    color:#8C1C25;
+
+
 }
+
+.nav-link{
+    color: white;
+
 }
+
+.nav-link:hover{
+    color: #8C1C25;
+}
+
 
 @media (max-width: 320px) {
    .logo{
@@ -92,10 +60,6 @@ a:hover{
     .collapse{
         display: list-item !important;
     }
-    .iframe{
-        size: 50%;
-        margin: 10%;
-       }
 }
 
 @media (max-width: 480px) {
@@ -105,10 +69,6 @@ a:hover{
     .collapse{
         display: list-item !important;
     }
-    .iframe{
-        size: 50%;
-        margin: 10%;
-       }
 
 }
 @media (max-width: 768px) {
@@ -118,9 +78,5 @@ a:hover{
     .collapse{
         display: list-item !important;
     }
-    .iframe{
-        size: 50%;
-        margin: 10%
-       }
-  
 }
+
