--- a/css/categorie.css
+++ b/css/categorie.css
@@ -1,6 +1,6 @@
 /*Style Settings*/
 .genre{
-    background-color: #59151A;
+    background-color:  rgb(75, 12, 17);
     max-height: 100vh;
     font-family: 'Bree Serif', serif;
 
@@ -13,15 +13,15 @@
 
 /*Categorie de film*/
 .titre{
-    padding-top: 0.5%;
+    padding-top: 2%;
     text-align: center;
-    color: #261616;
+    color: white;
 }
 
 #genreTitle{
     text-align: center;
     margin-bottom: 50px;
-    color: #261616;
+    color: white;
 }
 
 #title{
@@ -39,7 +39,7 @@
         left:500px;
         font-size: 60px;
         z-index: 1;
-        color: #261616;
+        color: #8C1C25;
     }
     #btnRight{
         position: absolute;
@@ -48,7 +48,7 @@
         font-size: 60px;
         width:20px;
         z-index: 1;
-        color: #261616;
+        color: #8C1C25;
     }
 
 
@@ -84,7 +84,7 @@
 
 
     .carousel{
-        height:450px
+        height:500px
     }
     
     .col-md-2{
