--- a/css/style4.css
+++ b/css/style4.css
@@ -1,3 +1,4 @@
+/*Page contact*/
 body{
     background-image: url("media/cinee.jpg");
     background-size: cover;
@@ -22,4 +23,19 @@ h4{
     opacity: 0.95;
     text-align: center;
     border-radius: 5%;
+}
+/*Page 404*/
+.p404{
+    background-color: black;
+    color: rgb(158, 30, 30);
+    font-family: 'Annie Use Your Telescope', cursive;
+
+    font-size: 200%;
+}
+.popcorn{
+    margin-top: 0% !important;
+    margin-left: 25%;
+}
+.texte{
+    text-align: center;
 }
