--- a/css/style3.css
+++ b/css/style3.css
@@ -55,6 +55,9 @@ body{
     text-align: center;
     margin-top:20px;
 }
-#eachCom{
+.eachCom{
     background-color: #59151A;
+}
+label{
+    font-size: 20px;
 }
