--- a/css/style4.css
+++ b/css/style4.css
@@ -15,14 +15,18 @@
     font-family: 'Bree Serif', serif;
 
 }
+.titrep{
+    color: #59151A;
+}
 #main{
-    padding-top: 90px;
-    height: 150%;
+    padding-top: 30%;
+    height: 100%;
     width: 100%;
     background-color: black;
     opacity: 0.95;
     text-align: center;
     border-radius: 5%;
+
 }
 /*Page 404*/
 
